--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -4,7 +4,7 @@
   padding: 0.5rem 1.5rem;
   border: 1px solid #8b005d;
   color: white;
-  background: #faf200;
+  background: #8b005d;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.26);
   cursor: pointer;
 }
